Fri Jul  1 08:21:28 2011  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_getivar): check vm state version
	  to invalidate inline chache (ivar index).
	  fixes Bug #4926.

	* vm_insnhelper.c (vm_setivar): ditto.

Fri Jul  1 08:03:15 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c, thread_pthread.c (WRITE_CONST): suppress warnings
	  `ignoring return value'.

Fri Jul  1 06:41:36 2011  Koichi Sasada  <ko1@atdot.net>

	* thread.c (rb_threadptr_check_signal): only wake up main thread.

	* thread.c (rb_threadptr_execute_interrupts_common): check signal
	  deliverly if it is main thread.
	  fixes [ruby-dev:44005] [Ruby 1.9 - Bug #4950]

	* bootstraptest/test_fork.rb: add a test for above.

	* signal.c (rb_get_next_signal): skip if signal_buff is empty.
	  (check signal_buff.size first)

	* vm_core.h: remove unused variable rb_thread_t::exec_signal.

	* thread.c (rb_thread_check_trap_pending): check
	  rb_signal_buff_size() because rb_thread_t::exec_signal
	  is no longer available.

Fri Jul  1 03:28:25 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (Init_class_hierarchy): should name BasicObject
	  explicitly.

	* variable.c (rb_const_defined_0): should not check for
	  superclasses as const_get.

Fri Jul  1 03:24:03 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: mathn is still alive (should die soon).

Thu Jun 30 23:50:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* misc/ruby-mode.el (ruby-indent-beg-re): Fix broken regular
	  expression.  Fixes #4546

Thu Jun 30 23:43:30 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl.c/.h: Added ossl_x509_name_sk2ary.
	* ext/openssl/ossl.c: Replaced ossl_x509_ary2k by generic macro to
	  simplify future conversions.
	* ext/openssl/ossl_ssl.c: Implement SSLSocket#client_ca.
	* test/openssl/test_ssl.rb: Add test for SSLSocket#client_ca.
	  Thanks to Ippei Obayashi for providing the patch!
	  [ Ruby 1.9 - Feature #4481 ] [ruby-core:35461]
